--- a/src/demo.html
+++ b/src/demo.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <div class="wrap"> </div>
+    <div>
+        -----HEAD
+        <header>头部</header>
+        <footer>尾部</footer>
+        ------
+    </div>
 </body>
 
 </html>
